--- a/services/api/package.json
+++ b/services/api/package.json
@@ -3,9 +3,9 @@
   "private": true,
   "scripts": {
     "build": "tsc --allowImportingTsExtensions false --noEmit false",
-    "dev": "tsx watch src/main.ts",
-    "start": "node dist/main.js",
-    "format": "prettier \"**/*\" --write --ignore-unknown --log-level error",
+    "dev": "tsx watch ./src/main.ts",
+    "start": "node ./dist/main.js",
+    "format": "prettier \"./**/*\" --write --ignore-unknown --log-level error",
     "lint": "eslint .",
     "fix": "eslint --fix ."
   },
@@ -18,21 +18,16 @@
     "@fastify/sensible": "^6.0.1",
     "@fastify/swagger": "^9.2.0",
     "@fastify/swagger-ui": "^5.1.0",
-    "@sinclair/typebox": "^0.33.19",
-    "dotenv": "^16.4.5",
+    "@sinclair/typebox": "^0.33.21",
     "fastify": "^5.1.0",
     "fastify-plugin": "^5.0.1",
     "pino": "^9.5.0"
   },
   "devDependencies": {
     "@platform/compilers": "workspace:*",
-    "@platform/eslint": "workspace:*",
-    "@platform/prettier": "workspace:*",
+    "@platform/formatters": "workspace:*",
+    "@platform/linters": "workspace:*",
     "@types/node": "^22.9.0",
-    "eslint": "^9.14.0",
-    "pino-pretty": "^11.3.0",
-    "prettier": "^3.3.3",
-    "tsx": "^4.19.2",
-    "typescript": "^5.6.3"
+    "pino-pretty": "^11.3.0"
   }
 }
