--- a/services/api/tsconfig.json
+++ b/services/api/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@platform/compilers/node-service",
+  "extends": "@platform/compilers/node-service.config",
   "compilerOptions": {
     "outDir": "dist",
     "rootDir": "src"
