--- a/services/api/package.json
+++ b/services/api/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "build": "tsc --allowImportingTsExtensions false --noEmit false",
-    "dev": "tsx watch ./src/main.ts",
+    "dev": "tsx watch --env-file=.env ./src/main.ts",
     "start": "node ./dist/main.js",
     "format": "prettier \"./**/*\" --write --ignore-unknown --log-level error",
     "lint": "eslint .",
@@ -18,6 +18,7 @@
     "@fastify/sensible": "^6.0.1",
     "@fastify/swagger": "^9.2.0",
     "@fastify/swagger-ui": "^5.1.0",
+    "@platform/domains": "workspace:*",
     "@sinclair/typebox": "^0.33.21",
     "fastify": "^5.1.0",
     "fastify-plugin": "^5.0.1",
