--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,14 +23,12 @@ jobs:
       - id: setup-pnpm
         name: Setup dependency manager
         uses: pnpm/action-setup@v4
-        with:
-          version: ^9.12.0
 
       - id: setup-node
         name: Setup Node.js environment
         uses: actions/setup-node@v4
         with:
-          node-version: "22.11.0"
+          node-version-file: 'package.json'
           cache: "pnpm"
 
       - id: configure-pnpm
