--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "geo-projects-platform",
   "private": true,
+  "packageManager": "pnpm@9.12.0",
   "engines": {
     "node": ">=22.11.0",
     "pnpm": ">=9.12.0"
