--- a/packages/domains/package.json
+++ b/packages/domains/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "@platform/neon": "workspace:*",
-    "geojson": "^0.5.0"
+    "@sinclair/typebox": "^0.34.0"
   },
   "devDependencies": {
     "@platform/compilers": "workspace:*",
