--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,9 +6,11 @@ on:
       - "*"
 
 jobs:
-  prepare-deployment:
+  prepare:
     name: Lint and Build
     runs-on: ubuntu-22.04
+    concurrency:
+      group: prepare-group-${{ github.ref }}
 
     env:
       TURBO_TELEMETRY_DISABLED: 1
@@ -28,7 +30,7 @@ jobs:
         name: Setup Node.js environment
         uses: actions/setup-node@v4
         with:
-          node-version-file: 'package.json'
+          node-version-file: "package.json"
           cache: "pnpm"
 
       - id: configure-pnpm
