--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -48,3 +48,28 @@ jobs:
       - id: run-build
         name: Run build
         run: pnpm run build
+
+  deploy:
+    name: Lint and Build
+    runs-on: ubuntu-22.04
+    concurrency: deploy-group-${{ github.ref }}
+
+    needs:
+      - prepare
+
+    steps:
+      - id: repository-checkout
+        name: Check out repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 2
+
+      - id: prepare-deploy-cli
+        name: Prepare Flyctl
+        uses: superfly/flyctl-actions/setup-flyctl
+
+      - id: run-deploy
+        name: Run Deploy
+        env:
+          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+        run: flyctl deploy . --app geo-projects-service-api
