--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev",
+    "test": "turbo run test",
     "format": "turbo run format",
     "lint": "turbo run lint",
     "fix": "turbo run fix"
