--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -98,6 +98,10 @@ jobs:
         run: |
           ls -l .env
 
+      - id: run-build
+        name: Run build
+        run: pnpm run build
+
       - id: run-tests
         name: Run tests
         run: pnpm run test
