--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,8 +6,8 @@ on:
       - "*"
 
 env:
-  TURBO_TELEMETRY_DISABLED: 1
   NODE_TEST_CONCURRENCY: 5
+  TURBO_TELEMETRY_DISABLED: 1
 
 jobs:
   prepare:
@@ -16,6 +16,9 @@ jobs:
     concurrency:
       group: ci-branch-${{ github.ref_name }}
       cancel-in-progress: true
+
+    env:
+      NODE_ENV: development
 
     steps:
       - id: repository-checkout
@@ -43,6 +46,10 @@ jobs:
         name: Install dependencies
         run: pnpm install
 
+      - id: init-env-file
+        name: Init .env file
+        run: touch .env
+
       - id: run-lint
         name: Run lint
         run: pnpm run lint
@@ -62,6 +69,7 @@ jobs:
       - prepare
 
     env:
+      NODE_ENV: test
       POSTGRES_DSN: ${{ secrets.POSTGRES_DSN }}
 
     steps:
@@ -90,11 +98,9 @@ jobs:
         name: Install dependencies
         run: pnpm install
 
-      - id: init-env-file-root
-        name: Init .env file in the root
-        run: |
-          echo "POSTGRES_DSN=some-variable" > .env
-          echo "NODE_ENV=development" >> .env
+      - id: init-env-file
+        name: Init .env file
+        run: touch .env
 
       - id: run-build
         name: Run build
@@ -115,6 +121,7 @@ jobs:
       - test
 
     env:
+      NODE_ENV: production
       FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
 
     steps:
