--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -50,7 +50,7 @@ jobs:
         name: Init .env file
         run: |
           touch .env
-          echo "NODE_ENV={{ env.NODE_ENV }}" >> .env
+          echo "NODE_ENV=${{ env.NODE_ENV }}" >> .env
 
       - id: run-lint
         name: Run lint
@@ -104,7 +104,7 @@ jobs:
         name: Init .env file
         run: |
           touch .env
-          echo "NODE_ENV={{ env.NODE_ENV }}" >> .env
+          echo "NODE_ENV=${{ env.NODE_ENV }}" >> .env
           echo "POSTGRES_DSN=${{ env.POSTGRES_DSN }}" >> .env
 
       - id: run-build
@@ -144,7 +144,7 @@ jobs:
         name: Init .env file
         run: |
           touch .env
-          echo "NODE_ENV={{ env.NODE_ENV }}" >> .env
+          echo "NODE_ENV=${{ env.NODE_ENV }}" >> .env
 
       - id: run-deploy
         name: Run Deploy
