Add automatic database branching for ci

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -72,7 +72,6 @@ jobs:
 
     env:
       NODE_ENV: test
-      POSTGRES_DSN: ${{ secrets.POSTGRES_DSN }}
 
     steps:
       - id: repository-checkout
@@ -100,12 +99,22 @@ jobs:
         name: Install dependencies
         run: pnpm install
 
+      - id: setup-test-database
+        name: Setup test database
+        uses: neondatabase/create-branch-action@v5
+        with:
+          api_key: ${{ secrets.NEON_API_KEY }}
+          project_id: ${{ vars.NEON_PROJECT_ID }}
+          parent: ${{ vars.NEON_BASE_TEST_BRANCH_ID }}
+          database: geo_project_platform
+          username: geo_project_platform_owner
+
       - id: init-env-file
         name: Init .env file
         run: |
           touch .env
           echo "NODE_ENV=${{ env.NODE_ENV }}" >> .env
-          echo "POSTGRES_DSN=${{ env.POSTGRES_DSN }}" >> .env
+          echo "POSTGRES_DSN=${{ steps.setup-test-database.outputs.db_url }}" >> .env
 
       - id: run-build
         name: Run build
@@ -114,6 +123,12 @@ jobs:
       - id: run-tests
         name: Run tests
         run: pnpm run test
+
+      - uses: neondatabase/delete-branch-action@v3
+        with:
+          api_key: ${{ secrets.NEON_API_KEY }}
+          project_id: ${{ vars.NEON_PROJECT_ID }}
+          branch: ${{ steps.setup-test-database.outputs.branch_id }}
 
   deploy:
     name: Deploy
@@ -127,7 +142,6 @@ jobs:
 
     env:
       NODE_ENV: production
-      FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
 
     steps:
       - id: repository-checkout
@@ -148,4 +162,4 @@ jobs:
 
       - id: run-deploy
         name: Run Deploy
-        run: flyctl deploy . --app geo-projects-service-api
+        run: flyctl deploy . --access-token ${{ secrets.FLY_API_TOKEN }} --app geo-projects-service-api
