--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -125,7 +125,9 @@ jobs:
         name: Run tests
         run: pnpm run test
 
-      - uses: neondatabase/delete-branch-action@v3
+      - id: clean-test-database
+        name: Clean test database
+        uses: neondatabase/delete-branch-action@v3
         with:
           api_key: ${{ secrets.NEON_API_KEY }}
           project_id: ${{ vars.NEON_PROJECT_ID }}
@@ -163,4 +165,4 @@ jobs:
 
       - id: run-deploy
         name: Run Deploy
-        run: flyctl deploy --access-token ${{ secrets.FLY_API_TOKEN }} --app geo-projects-service-api .
+        run: flyctl deploy . --access-token secret --app geo-projects-service-api
