--- a/infrastructure/flyio/src/configs/prod.config.json
+++ b/infrastructure/flyio/src/configs/prod.config.json
@@ -4,7 +4,7 @@
   "kill_signal": "SIGINT",
   "kill_timeout": 60,
   "build": {
-    "dockerfile": "Dockerfile",
+    "dockerfile": "../../../../Dockerfile",
     "build-target": "app-service-api"
   },
   "http_service": {
