Add dotenv cli helper

--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "lint": "turbo run lint",
     "fix": "turbo run fix"
   },
+  "dependencies": {
+    "dotenv-cli": "^7.4.4"
+  },
   "devDependencies": {
-    "turbo": "^2.3.0"
+    "turbo": "^2.3.1"
   }
 }
