--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -51,6 +51,7 @@ jobs:
         run: |
           touch .env
           echo "NODE_ENV=${{ env.NODE_ENV }}" >> .env
+          echo "VERSION_SHA=${{ github.sha}}" >> .env
 
       - id: run-lint
         name: Run lint
@@ -99,8 +100,8 @@ jobs:
         name: Install dependencies
         run: pnpm install
 
-      - id: setup-test-database
-        name: Setup test database
+      - id: prepare-test-database
+        name: Prepare test database
         uses: neondatabase/create-branch-action@v5
         with:
           api_key: ${{ secrets.NEON_API_KEY }}
@@ -115,6 +116,7 @@ jobs:
         run: |
           touch .env
           echo "NODE_ENV=${{ env.NODE_ENV }}" >> .env
+          echo "VERSION_SHA=${{ github.sha}}" >> .env
           echo "POSTGRES_DSN=${{ steps.setup-test-database.outputs.db_url }}" >> .env
 
       - id: run-build
@@ -125,8 +127,8 @@ jobs:
         name: Run tests
         run: pnpm run test
 
-      - id: clean-test-database
-        name: Clean test database
+      - id: rollback-test-database
+        name: Rollback test database
         uses: neondatabase/delete-branch-action@v3
         with:
           api_key: ${{ secrets.NEON_API_KEY }}
@@ -162,9 +164,10 @@ jobs:
         run: |
           touch .env
           echo "NODE_ENV=${{ env.NODE_ENV }}" >> .env
+          echo "VERSION_SHA=${{ github.sha}}" >> .env
 
       - id: run-deploy
         name: Run Deploy
-        run: flyctl deploy . --remote-only --app ${{ vars.FLY_APP_NAME }} --env VERSION_SHA=${{ github.sha }} --config infrastructure/flyio/src/configs/prod.config.json
+        run: flyctl deploy . --remote-only --app ${{ vars.FLY_APP_NAME }} --config infrastructure/flyio/src/configs/prod.config.json
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
