--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -51,8 +51,6 @@ jobs:
         run: |
           touch .env
           echo "NODE_ENV=${{ env.NODE_ENV }}" >> .env
-          echo "VERSION_SHA=${{ github.sha}}" >> .env
-          echo "LOG_LEVEL=error" >> .env
 
       - id: run-lint
         name: Run lint
@@ -101,8 +99,8 @@ jobs:
         name: Install dependencies
         run: pnpm install
 
-      - id: prepare-test-database
-        name: Prepare test database
+      - id: setup-test-database
+        name: Setup test database
         uses: neondatabase/create-branch-action@v5
         with:
           api_key: ${{ secrets.NEON_API_KEY }}
@@ -117,8 +115,6 @@ jobs:
         run: |
           touch .env
           echo "NODE_ENV=${{ env.NODE_ENV }}" >> .env
-          echo "VERSION_SHA=${{ github.sha}}" >> .env
-          echo "LOG_LEVEL=silent" >> .env
           echo "POSTGRES_DSN=${{ steps.setup-test-database.outputs.db_url }}" >> .env
 
       - id: run-build
@@ -129,8 +125,8 @@ jobs:
         name: Run tests
         run: pnpm run test
 
-      - id: rollback-test-database
-        name: Rollback test database
+      - id: clean-test-database
+        name: Clean test database
         uses: neondatabase/delete-branch-action@v3
         with:
           api_key: ${{ secrets.NEON_API_KEY }}
@@ -166,11 +162,9 @@ jobs:
         run: |
           touch .env
           echo "NODE_ENV=${{ env.NODE_ENV }}" >> .env
-          echo "VERSION_SHA=${{ github.sha}}" >> .env
-          echo "LOG_LEVEL=error" >> .env
 
       - id: run-deploy
         name: Run Deploy
-        run: flyctl deploy . --remote-only --app ${{ vars.FLY_APP_NAME }} --config infrastructure/flyio/src/configs/prod.config.json
+        run: flyctl deploy . --remote-only --app ${{ vars.FLY_APP_NAME }} --env VERSION_SHA=${{ github.sha }} --config infrastructure/flyio/src/configs/prod.config.json
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
