--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -51,6 +51,8 @@ jobs:
         run: |
           touch .env
           echo "NODE_ENV=${{ env.NODE_ENV }}" >> .env
+          echo "VERSION_SHA=${{ github.sha}}" >> .env
+          echo "LOG_LEVEL=error" >> .env
 
       - id: run-lint
         name: Run lint
@@ -115,7 +117,9 @@ jobs:
         run: |
           touch .env
           echo "NODE_ENV=${{ env.NODE_ENV }}" >> .env
-          echo "POSTGRES_DSN=${{ steps.setup-test-database.outputs.db_url }}" >> .env
+          echo "VERSION_SHA=${{ github.sha}}" >> .env
+          echo "LOG_LEVEL=silent" >> .env
+          echo "POSTGRES_DSN=${{ steps.prepare-test-database.outputs.db_url }}" >> .env
 
       - id: run-build
         name: Run build
@@ -131,7 +135,7 @@ jobs:
         with:
           api_key: ${{ secrets.NEON_API_KEY }}
           project_id: ${{ vars.NEON_PROJECT_ID }}
-          branch: ${{ steps.setup-test-database.outputs.branch_id }}
+          branch: ${{ steps.prepare-test-database.outputs.branch_id }}
 
   deploy:
     name: Deploy
@@ -162,9 +166,11 @@ jobs:
         run: |
           touch .env
           echo "NODE_ENV=${{ env.NODE_ENV }}" >> .env
+          echo "VERSION_SHA=${{ github.sha}}" >> .env
+          echo "LOG_LEVEL=error" >> .env
 
       - id: run-deploy
         name: Run Deploy
-        run: flyctl deploy . --remote-only --app ${{ vars.FLY_APP_NAME }} --env VERSION_SHA=${{ github.sha }} --config infrastructure/flyio/src/configs/prod.config.json
+        run: flyctl deploy . --remote-only --app ${{ vars.FLY_APP_NAME }} --config infrastructure/flyio/src/configs/prod.config.json
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
