--- a/infrastructure/neon/package.json
+++ b/infrastructure/neon/package.json
@@ -9,6 +9,7 @@
   },
   "scripts": {
     "build": "tsc --allowImportingTsExtensions false --noEmit false",
+    "dev": "tsc --allowImportingTsExtensions false --noEmit false --watch",
     "format": "prettier \"./**/*\" --write --ignore-unknown --log-level error",
     "lint": "eslint .",
     "fix": "eslint --fix .",
@@ -16,7 +17,7 @@
     "migration:run": "drizzle-kit migrate"
   },
   "dependencies": {
-    "@sinclair/typebox": "^0.34.7",
+    "@sinclair/typebox": "^0.34.8",
     "drizzle-orm": "^0.36.4",
     "drizzle-typebox": "^0.1.1",
     "pg": "^8.13.1"
@@ -25,7 +26,7 @@
     "@platform/compilers": "workspace:*",
     "@platform/formatters": "workspace:*",
     "@platform/linters": "workspace:*",
-    "@types/node": "^22.9.1",
+    "@types/node": "^22.9.3",
     "@types/pg": "^8.11.10",
     "drizzle-kit": "^0.28.1",
     "prettier": "^3.3.3"
