--- a/packages/domains/package.json
+++ b/packages/domains/package.json
@@ -9,13 +9,15 @@
   },
   "scripts": {
     "build": "tsc --allowImportingTsExtensions false --noEmit false",
+    "dev": "tsc --allowImportingTsExtensions false --noEmit false --watch",
     "format": "prettier \"./**/*\" --write --ignore-unknown --log-level error",
     "lint": "eslint .",
     "fix": "eslint --fix ."
   },
   "dependencies": {
     "@platform/neon": "workspace:*",
-    "@sinclair/typebox": "^0.34.7"
+    "@sinclair/typebox": "^0.34.8",
+    "@turf/turf": "^7.1.0"
   },
   "devDependencies": {
     "@platform/compilers": "workspace:*",
